style.css
*, body, html {
    padding:0;
    margin:0;
    font-family: "DM Sans", sans-serif;
    background-color: rgb(31, 31, 31);
    max-width: 100vw !important;
    color:white;
    overflow-x:hidden;
}

h1{
    background: #C612CF;
    background: linear-gradient(to right, #C612CF 18%, #0300CF 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size:13vw;
    margin:0;
    margin-left:5vw;
    margin-bottom:3vw;
}

.header{
    width:100%;
    border-bottom:2px solid white;
}

.section {
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* margin:5vw; */
    padding-bottom:3vw;
    /* margin-bottom:3vw; */
    border-bottom:2px solid white;
}

.section-h-cont {
    width:90%;
    text-align: left;
}

.section-h {
    font-size:3vw;
    margin: 0;
    padding: 2%;
}

.row{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    text-align: center;
}

.project {
    max-width:25vw;
    width:25vw;
    max-height:15vw;
    height:15vw;
    position: relative;
    border:2px solid white;
    margin:2.5vw;
}

.project img{
    max-width:25vw;
    width:25vw;
    max-height:15vw;
    height:15vw;
    filter: grayscale(32%) brightness(21%) saturate(132%);
    -webkit-filter: grayscale(32%) brightness(21%) saturate(132%);
}


.project h2 {
    position:absolute;
    left:50%;
    top:50%;
    transform:translate(-50%, -50%);
    color:#C612CF;
    height:100%;
    line-height: 100%;
    text-align: center;
    font-size:4vw;
}

.skills {
    height:25vh;
    border:none;
    border-bottom:2px solid white;
    display:flex;
    align-items: center;
    justify-content: space-evenly;
}

.skills img {
    height:5vh;
    width:5vh;
    max-width: 5vh;
    max-height: 5vh;
}

.stats {
    width:100%;
    height:25vw;
    border-bottom:2px solid white;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
}

h3 {
    font-size:3vw;
    font-weight: 400;
    opacity:0.5;
    text-decoration: none;
}

h3:hover {
    font-weight:800;
    opacity: 1;
    text-decoration: underline;
}

.contact {
    width:100vw;
    max-width:100vw;
    height:15vw;
    text-align: center;
    border-bottom:2px solid white;
    display:flex;
    flex-direction: column;
    justify-content: center;
}

h4 {
    font-size:3vw;
}

::-webkit-scrollbar {
    width: 1vw;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: #d9d9d9;
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: rgb(73, 73, 73);
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: linear-gradient(to top, #C612CF 18%, #0300CF 100%);
  }

